[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "infrasys"
version = "1.0.0rc2"
description = ''
readme = "README.md"
requires-python = ">=3.11, <3.14"
license = "BSD-3-Clause"
keywords = []
authors = [
    { name = "Aadil Latif", email = "aadil.latif@nrel.gov" },
    { name = "Daniel Thom", email = "daniel.thom@nrel.gov" },
    { name = "Kapil Duwadi", email = "kapil.duwadi@nrel.gov" },
    { name = "Pedro Andres Sanchez Perez", email = "pedroandres.sanchezperez@nrel.gov" },
    { name = "Tarek Elgindy", email = "tarek.elgindy@nrel.gov" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "h5py~=3.13.0",
    "loguru~=0.7.2",
    "numpy >= 2, < 3",
    "orjson~=3.10.8",
    "pandas >= 2, < 3",
    "pint~=0.23",
    "pyarrow~=21.0",
    "pydantic >= 2.7, < 3",
    "python-dateutil~=2.9.0.post0",
    "rich~=13.7.1",
]
[project.optional-dependencies]
chronify = [
    "chronify ~= 0.3.1",
]

[project.urls] 
Documentation = "https://github.com/NREL/infrasys#readme"
Issues = "https://github.com/NREL/infrasys/issues"
Source = "https://github.com/NREL/infrasys"

[tool.mypy]
check_untyped_defs = true
files = [
  "src",
  "tests",
]

[tool.pytest.ini_options]
pythonpath = "src"
minversion = "6.0"
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "_build",
    "build",
    "dist",
    "env",
    "venv",
]

line-length = 99
indent-width = 4

target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = [
    "C901",   # McCabe complexity
    "E4",     # Subset of pycodestyle (E)
    "E7",
    "E9",
    "EM",     # string formatting in an exception message
    "F",      # Pyflakes
    "W",      # pycodestyle warnings
]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[dependency-groups]
dev = [
    "ipython>=9.1.0",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "infrasys[chronify]",
    "ruff",
    "types-python-dateutil>=2.9.0.20241206",
    "mypy >=1.13, < 2",
    "pandas-stubs",
    "pyarrow-stubs",
    "pytest-missing-modules>=0.2.1",
]
docs = [
    "autodoc_pydantic~=2.0",
    "furo",
    "myst_parser",
    "ipython>=9.1.0",
    "types-python-dateutil>=2.9.0.20241206",
    "pytest-missing-modules>=0.2.1",
    "sphinx",
    "sphinx-click",
    "sphinx-copybutton",
    "sphinx-tabs~=3.4",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]
